# genesis

./: CMakeLists.txt  LICENSE  Makefile  README.md  debug_logger.h  main.cpp
client/: canvas.html
json/: benchmark_config.json  default.json  world.json
src/: debug_logger.h  genesis.cpp  genesis.h  genesis_console.cpp  genesis_gui.cpp  parameters.h  utils.h
